# local-agent-scout

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml
evals/: run_eval.py
evals/data/: extract_labels.example.jsonl
skills/: extract.md
src/local_agent_scout/: cli.py
src/local_agent_scout/harness/: loop.py  model.py  state.py  trace.py
src/local_agent_scout/tools/: draft.py  enrich.py  extract.py  find_contact.py  score.py
